started styling page
Co-authored-by: toddmac12 <toddmac12@users.noreply.github.com>

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,15 @@ code {
 .navbar{
   display: flex;
 }
+.card{
+  margin: 5px;
+  padding: 5px;
+}
+/* .card-justify{
+  margin: 5px;
+  padding: 5px;
+  grid-template-columns: 33% 33% 33%;
+} */
+.container{
+  text-align:center;
+}
